fix overflow body

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -424,6 +424,8 @@ html {
 
 body {
   position: relative;
+  overflow-x: hidden;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
