--- a/src/assets/styles/scss/02-base/_global.scss
+++ b/src/assets/styles/scss/02-base/_global.scss
@@ -5,8 +5,8 @@ html {
 
 body {
   position: relative;
-  //overflow-x: hidden;
-  //overflow-y: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
